// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`api 1`] = `
Object {
  "domains": Object {
    "nodes": Array [
      Object {
        "api": Object {
          "anonRole": "anonymous",
          "apiModules": Object {
            "nodes": Array [],
          },
          "databaseId": "[ID]",
          "dbname": "[testingdb]",
          "isPublic": true,
          "rlsModule": Object {
            "authenticate": "authenticate",
            "currentGroupIds": "current_group_ids",
            "currentRole": "current_user",
            "currentRoleId": "[ID]",
            "privateSchema": Object {
              "schemaName": "private_schema",
            },
          },
          "roleName": "authenticated",
          "schemaNames": Object {
            "nodes": Array [
              Object {
                "schemaName": "public_schema",
              },
            ],
          },
          "schemaNamesFromExt": Object {
            "nodes": Array [],
          },
        },
      },
    ],
  },
}
`;

exports[`meta 1`] = `
Object {
  "domains": Object {
    "nodes": Array [
      Object {
        "api": Object {
          "anonRole": "anonymous",
          "apiModules": Object {
            "nodes": Array [],
          },
          "databaseId": "[ID]",
          "dbname": "[testingdb]",
          "isPublic": true,
          "rlsModule": null,
          "roleName": "authenticated",
          "schemaNames": Object {
            "nodes": Array [],
          },
          "schemaNamesFromExt": Object {
            "nodes": Array [
              Object {
                "schemaName": "collections_public",
              },
              Object {
                "schemaName": "meta_public",
              },
            ],
          },
        },
      },
    ],
  },
}
`;

exports[`site 1`] = `
Object {
  "domains": Object {
    "nodes": Array [
      Object {
        "site": Object {
          "app": Object {
            "appImage": null,
            "appStoreLink": null,
            "name": "My App",
            "playStoreLink": null,
          },
          "appleTouchIcon": null,
          "description": "Description goes here",
          "favicon": null,
          "logo": null,
          "ogImage": null,
          "siteModules": Object {
            "nodes": Array [],
          },
          "siteThemes": Object {
            "nodes": Array [
              Object {
                "theme": Object {
                  "primaryColor": "#aeaeae",
                },
              },
            ],
          },
          "title": "Title",
        },
      },
    ],
  },
}
`;
